--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^3.1.6
   cached_network_image: ^2.2.0+1
   uuid: ^2.2.0
+  timeago: ^2.0.26
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
