--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   uuid: ^2.2.0
   timeago: ^2.0.26
   auto_size_text: ^2.1.0
+  fluttertoast: ^7.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
