--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg:
-  keyboard_visibility: ^0.5.6
+  flutter_keyboard_visibility:
   lottie: ^0.4.1
   image_picker: ^0.6.7+4
   provider: ^4.3.1
