--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   agora_rtc_engine: ^1.0.13
   permission_handler: ^5.0.1+1
+  flutter_hooks: ^0.13.2
 
 dev_dependencies:
   flutter_test:
