--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg:
+  flutter_svg: ^0.18.0
   keyboard_visibility: ^0.5.6
   lottie: ^0.4.1
   image_picker: ^0.6.7+4
@@ -49,7 +49,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/svgs/
-    - assets/images/gifs/
     - assets/images/
     - assets/lottie/
   #   - images/a_dot_ham.jpeg
