--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,27 +23,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^0.18.0
-  flutter_keyboard_visibility: null
-  lottie: ^0.4.1
-  image_picker: ^0.6.7+4
-  provider: ^4.3.1
-  firebase_auth: ^0.16.1
+  agora_rtc_engine: ^1.0.13
+  auto_size_text: ^2.1.0
+  cached_network_image: ^2.2.0+1
   cloud_firestore: ^0.13.7
   cloud_functions: ^0.5.0
-  firebase_storage: ^3.1.6
-  cached_network_image: ^2.2.0+1
-  uuid: ^2.2.0
-  timeago: ^2.0.26
-  auto_size_text: ^2.1.0
-  fluttertoast: ^7.0.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  agora_rtc_engine: ^1.0.13
-  permission_handler: ^5.0.1+1
+  firebase_auth: ^0.16.1
+  firebase_storage: ^3.1.6
   flutter_hooks: ^0.13.2
+  flutter_keyboard_visibility: null
+  flutter_svg: ^0.18.0
+  fluttertoast: ^7.0.2
+  image_picker: ^0.6.7+4
+  lottie: ^0.4.1
+  permission_handler: ^5.0.1+1
+  provider: ^4.3.1
+  shimmer: ^1.1.1
+  timeago: ^2.0.26
+  uuid: ^2.2.0
 
 dev_dependencies:
   flutter_test:
