--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shimmer: ^1.1.1
   timeago: ^2.0.26
   uuid: ^2.2.0
+  flutter_inappwebview: ^4.0.0+4
 
 dev_dependencies:
   flutter_test:
