--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,14 @@ dependencies:
   agora_rtc_engine: ^1.0.13
   auto_size_text: ^2.1.0
   cached_network_image: ^2.2.0+1
-  cloud_firestore: ^0.13.7
-  cloud_functions: ^0.5.0
+  cloud_firestore: ^0.14.4
+  cloud_functions: ^0.7.2
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.16.1
-  firebase_storage: ^3.1.6
+  device_info: ^1.0.0
+  firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
+  firebase_messaging: ^7.0.3
+  firebase_storage: ^5.2.0
   flutter_hooks: ^0.13.2
   flutter_keyboard_visibility: null
   flutter_svg: ^0.18.0
