--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^0.5.3
   firebase_messaging: ^7.0.3
   firebase_storage: ^5.2.0
+  flutter_callkeep: ^0.1.8
   flutter_hooks: ^0.13.2
   flutter_keyboard_visibility: null
   flutter_svg: ^0.18.0
