--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,16 +26,17 @@ dependencies:
   agora_rtc_engine: ^1.0.13
   auto_size_text: ^2.1.0
   cached_network_image: ^2.2.0+1
-  cloud_firestore: ^0.14.4
-  cloud_functions: ^0.7.2
+  cloud_firestore: ^0.16.0+1
+  cloud_functions: ^0.9.0
   cupertino_icons: ^0.1.3
   device_info: ^1.0.0
-  firebase_auth: ^0.18.4+1
-  firebase_core: ^0.5.3
-  firebase_messaging: ^7.0.3
-  firebase_storage: ^5.2.0
+  firebase_auth: ^0.20.1
+  firebase_core: ^0.7.0
+  firebase_messaging: ^6.0.16
+  firebase_storage: ^7.0.0
   flutter_callkeep: ^0.1.8
   flutter_hooks: ^0.13.2
+  flutter_inappwebview: ^4.0.0+4
   flutter_keyboard_visibility: null
   flutter_svg: ^0.18.0
   fluttertoast: ^7.0.2
@@ -47,7 +48,6 @@ dependencies:
   shimmer: ^1.1.1
   timeago: ^2.0.26
   uuid: ^2.2.0
-  flutter_inappwebview: ^4.0.0+4
 
 dev_dependencies:
   flutter_test:
