--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.peaman"
+        applicationId "com.bally.app"
         minSdkVersion 16
         multiDexEnabled true
         targetSdkVersion 28
